force-app/main/default/objects/Case/fields/Contact_Us_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Deadline__c</fullName>
    <inlineHelpText>Required if Case Status is &apos;Contact Us Request Sent&apos; or &apos;Waiting Time Paused&apos;</inlineHelpText>
    <label>Contact Us Deadline</label>
    <type>DateTime</type>
</CustomField>