force-app/main/default/objects/Case/fields/CORE10_Improvement_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CORE10_Improvement_Indicator__c</fullName>
    <formula>IF(
    IF(AND(First_Core10_Score__c &gt;= 0, First_Core10_Score__c &lt; 6), 0,IF(AND(First_Core10_Score__c &gt; 5, First_Core10_Score__c &lt; 11), 1,IF(AND(First_Core10_Score__c &gt; 10, First_Core10_Score__c &lt; 16), 2,IF(AND(First_Core10_Score__c &gt; 15, First_Core10_Score__c &lt; 21), 3,IF(AND(First_Core10_Score__c &gt; 20, First_Core10_Score__c &lt; 26), 4, IF(AND(First_Core10_Score__c &gt; 25, First_Core10_Score__c &lt; 41), 5,NULL))))))
    = IF(AND(Last_Core10_Score__c  &gt;= 0, Last_Core10_Score__c  &lt; 6), 0,IF(AND(Last_Core10_Score__c  &gt; 5, Last_Core10_Score__c  &lt; 11), 1,IF(AND(Last_Core10_Score__c  &gt; 10, Last_Core10_Score__c  &lt; 16), 2,IF(AND(Last_Core10_Score__c  &gt; 15, Last_Core10_Score__c  &lt; 21), 3,IF(AND(Last_Core10_Score__c  &gt; 20, Last_Core10_Score__c  &lt; 26), 4, IF(AND(Last_Core10_Score__c  &gt; 25, Last_Core10_Score__c  &lt; 41), 5,NULL)))))),
    &quot;Stable&quot;,

    IF(
        IF(AND(First_Core10_Score__c &gt;= 0, First_Core10_Score__c &lt; 6), 0,IF(AND(First_Core10_Score__c &gt; 5, First_Core10_Score__c &lt; 11), 1,IF(AND(First_Core10_Score__c &gt; 10, First_Core10_Score__c &lt; 16), 2,IF(AND(First_Core10_Score__c &gt; 15, First_Core10_Score__c &lt; 21), 3,IF(AND(First_Core10_Score__c &gt; 20, First_Core10_Score__c &lt; 26), 4, IF(AND(First_Core10_Score__c &gt; 25, First_Core10_Score__c &lt; 41), 5,NULL))))))
        &lt; IF(AND(Last_Core10_Score__c  &gt;= 0, Last_Core10_Score__c  &lt; 6), 0,IF(AND(Last_Core10_Score__c  &gt; 5, Last_Core10_Score__c  &lt; 11), 1,IF(AND(Last_Core10_Score__c  &gt; 10, Last_Core10_Score__c  &lt; 16), 2,IF(AND(Last_Core10_Score__c  &gt; 15, Last_Core10_Score__c  &lt; 21), 3,IF(AND(Last_Core10_Score__c  &gt; 20, Last_Core10_Score__c  &lt; 26), 4, IF(AND(Last_Core10_Score__c  &gt; 25, Last_Core10_Score__c  &lt; 41), 5,NULL)))))),
        &quot;Worsened&quot;,

        IF(
            IF(AND(First_Core10_Score__c &gt;= 0, First_Core10_Score__c &lt; 6), 0,IF(AND(First_Core10_Score__c &gt; 5, First_Core10_Score__c &lt; 11), 1,IF(AND(First_Core10_Score__c &gt; 10, First_Core10_Score__c &lt; 16), 2,IF(AND(First_Core10_Score__c &gt; 15, First_Core10_Score__c &lt; 21), 3,IF(AND(First_Core10_Score__c &gt; 20, First_Core10_Score__c &lt; 26), 4, IF(AND(First_Core10_Score__c &gt; 25, First_Core10_Score__c &lt; 41), 5,NULL))))))
            &gt; IF(AND(Last_Core10_Score__c  &gt;= 0, Last_Core10_Score__c  &lt; 6), 0,IF(AND(Last_Core10_Score__c  &gt; 5, Last_Core10_Score__c  &lt; 11), 1,IF(AND(Last_Core10_Score__c  &gt; 10, Last_Core10_Score__c  &lt; 16), 2,IF(AND(Last_Core10_Score__c  &gt; 15, Last_Core10_Score__c  &lt; 21), 3,IF(AND(Last_Core10_Score__c  &gt; 20, Last_Core10_Score__c  &lt; 26), 4, IF(AND(Last_Core10_Score__c  &gt; 25, Last_Core10_Score__c  &lt; 41), 5,NULL)))))),
            &quot;Improved&quot;, null
        )
    )
)</formula>
    <label>CORE-10 Improvement Indicator</label>
    <type>Text</type>
</CustomField>