force-app/main/default/objects/Case/fields/Date_Added_to_Waiting_List__c.field-meta.xml
<CustomField>
    <fullName>Date_Added_to_Waiting_List__c</fullName>
    <label>Date Added to Waiting List</label>
    <type>Date</type>
</CustomField>