force-app/main/default/objects/Case/fields/Days_Since_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Close__c</fullName>
    <formula>TODAY() - DATEVALUE(ClosedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>