force-app/main/default/objects/Case/fields/Discharge_Summary__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Summary__c</fullName>
    <label>Discharge Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>