force-app/main/default/objects/Case/fields/First_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Appointment_Date__c</fullName>
    <label>First Appointment Date</label>
    <summarizedField>Appointment__c.Start_Date_Time__c</summarizedField>
    <summaryForeignKey>Appointment__c.Case__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>