force-app/main/default/objects/Case/fields/First_Core10_Score__c.field-meta.xml
<CustomField>
    <fullName>First_Core10_Score__c</fullName>
    <label>First Core10 Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>