force-app/main/default/objects/Case/fields/First_PHQ9_Score__c.field-meta.xml
<CustomField>
    <fullName>First_PHQ9_Score__c</fullName>
    <label>First PHQ9 Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>