force-app/main/default/objects/Case/fields/First_Treatment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Treatment_Date__c</fullName>
    <label>First Treatment Date</label>
    <type>Date</type>
</CustomField>