force-app/main/default/objects/Case/fields/FORMULA_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Owner_Full_Name__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Full Name</label>
    <type>Text</type>
</CustomField>