force-app/main/default/objects/Case/fields/GAD7_First_Score_Banding__c.field-meta.xml
<CustomField>
    <fullName>GAD7_First_Score_Banding__c</fullName>
    <formula>IF(
AND(First_GAD7_Score__c &gt;= 0, First_GAD7_Score__c &lt; 6),&quot;Mild&quot;,
IF(
AND(First_GAD7_Score__c &gt; 5, First_GAD7_Score__c &lt; 11), &quot;Moderate&quot;,
IF(
AND(First_GAD7_Score__c &gt; 10, First_GAD7_Score__c &lt; 22), &quot;Severe&quot;,
NULL
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GAD7 First Score Banding</label>
    <type>Text</type>
</CustomField>