force-app/main/default/objects/Case/fields/Last_GAD7_Score__c.field-meta.xml
<CustomField>
    <fullName>Last_GAD7_Score__c</fullName>
    <label>Last GAD7 Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>