force-app/main/default/objects/Case/fields/Last_PHQ9_Clinical_Rating__c.field-meta.xml
<CustomField>
    <fullName>Last_PHQ9_Clinical_Rating__c</fullName>
    <formula>IF(
AND(Last_PHQ9_Score__c &gt; 0, Last_PHQ9_Score__c &lt; 11),&quot;Non Clinical&quot;,
IF(
AND(Last_PHQ9_Score__c &gt; 10, Last_PHQ9_Score__c &lt; 27), &quot;Clinical&quot;,
NULL
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last PHQ9 Clinical Rating</label>
    <type>Text</type>
</CustomField>