force-app/main/default/objects/Case/fields/Moved_to_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_Recovery__c</fullName>
    <formula>IF(Total_Number_of_Attended_Sessions__c &lt; 2, &quot;N/A&quot;, IF( AND(Starting_Caseness__c=&quot;Clinical&quot;,Overall_Caseness__c=&quot;Not Clinical&quot;) , &quot;Yes&quot;, IF(Starting_Caseness__c=&quot;Not Clinical&quot;, &quot;N/A&quot;, &quot;No&quot;)))</formula>
    <label>Moved to Recovery?</label>
    <type>Text</type>
</CustomField>