force-app/main/default/objects/Case/fields/Number_of_Open_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Tasks__c</fullName>
    <description>Total number of open tasks releated to this case</description>
    <inlineHelpText>Total number of open tasks releated to this case</inlineHelpText>
    <label>Number of Open Tasks</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>