force-app/main/default/objects/Case/fields/Overall_Caseness__c.field-meta.xml
<CustomField>
    <fullName>Overall_Caseness__c</fullName>
    <formula>IF( AND(  ISNULL(  Last_PHQ9_Score__c  ) , ISNULL(  Last_GAD7_Score__c  )) , &quot;No Scores&quot;,  IF(  Last_PHQ9_Score__c  &gt;=10, &quot;Clinical&quot;,  IF(  Last_GAD7_Score__c  &gt;=8, &quot;Clinical&quot;, &quot;Not Clinical&quot;) ) )</formula>
    <label>Overall Caseness</label>
    <type>Text</type>
</CustomField>