force-app/main/default/objects/Case/fields/PHQ9_First_Score_Banding__c.field-meta.xml
<CustomField>
    <fullName>PHQ9_First_Score_Banding__c</fullName>
    <formula>IF(
AND(First_PHQ9_Score__c &gt;= 0, First_PHQ9_Score__c &lt; 5),&quot;None&quot;,
IF(
AND(First_PHQ9_Score__c &gt; 4, First_PHQ9_Score__c &lt; 10), &quot;Mild&quot;,
IF(
AND(First_PHQ9_Score__c &gt; 9, First_PHQ9_Score__c &lt; 15), &quot;Moderate&quot;,
IF(
AND(First_PHQ9_Score__c &gt; 14, First_PHQ9_Score__c &lt; 20), &quot;Moderately Severe&quot;,
IF(
AND(First_PHQ9_Score__c &gt; 19, First_PHQ9_Score__c &lt; 28), &quot;Severe&quot;,
NULL
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PHQ9 First Score Banding</label>
    <type>Text</type>
</CustomField>