force-app/main/default/objects/Case/fields/PHQ9_Improvement_Indicator__c.field-meta.xml
<CustomField>
    <fullName>PHQ9_Improvement_Indicator__c</fullName>
    <formula>IF(
IF(AND(First_PHQ9_Score__c &gt;= 0, First_PHQ9_Score__c &lt; 5), 0,IF(AND(First_PHQ9_Score__c &gt; 4, First_PHQ9_Score__c &lt; 10), 1,IF(AND(First_PHQ9_Score__c &gt; 9, First_PHQ9_Score__c &lt; 15), 2,IF(AND(First_PHQ9_Score__c &gt; 14, First_PHQ9_Score__c &lt; 20), 3,IF(AND(First_PHQ9_Score__c &gt; 19, First_PHQ9_Score__c &lt; 28),4,NULL)))))
= IF(AND(Last_PHQ9_Score__c &gt;= 0, Last_PHQ9_Score__c &lt; 5), 0,IF(AND(Last_PHQ9_Score__c &gt; 4, Last_PHQ9_Score__c &lt; 10), 1,IF(AND(Last_PHQ9_Score__c &gt; 9, Last_PHQ9_Score__c &lt; 15), 2,IF(AND(Last_PHQ9_Score__c &gt; 14, Last_PHQ9_Score__c &lt; 20), 3,IF(AND(Last_PHQ9_Score__c &gt; 19, Last_PHQ9_Score__c &lt; 28), 4 ,NULL))))),
&quot;Stable&quot;,

IF(
IF(AND(First_PHQ9_Score__c &gt;= 0, First_PHQ9_Score__c &lt; 5), 0,IF(AND(First_PHQ9_Score__c &gt; 4, First_PHQ9_Score__c &lt; 10), 1,IF(AND(First_PHQ9_Score__c &gt; 9, First_PHQ9_Score__c &lt; 15), 2,IF(AND(First_PHQ9_Score__c &gt; 14, First_PHQ9_Score__c &lt; 20), 3,IF(AND(First_PHQ9_Score__c &gt; 19, First_PHQ9_Score__c &lt; 28),4,NULL)))))
&lt; IF(AND(Last_PHQ9_Score__c &gt;= 0, Last_PHQ9_Score__c &lt; 5), 0,IF(AND(Last_PHQ9_Score__c &gt; 4, Last_PHQ9_Score__c &lt; 10), 1,IF(AND(Last_PHQ9_Score__c &gt; 9, Last_PHQ9_Score__c &lt; 15), 2,IF(AND(Last_PHQ9_Score__c &gt; 14, Last_PHQ9_Score__c &lt; 20), 3,IF(AND(Last_PHQ9_Score__c &gt; 19, Last_PHQ9_Score__c &lt; 28), 4 ,NULL))))),
&quot;Worsened&quot;,

IF(
IF(AND(First_PHQ9_Score__c &gt;= 0, First_PHQ9_Score__c &lt; 5), 0,IF(AND(First_PHQ9_Score__c &gt; 4, First_PHQ9_Score__c &lt; 10), 1,IF(AND(First_PHQ9_Score__c &gt; 9, First_PHQ9_Score__c &lt; 15), 2,IF(AND(First_PHQ9_Score__c &gt; 14, First_PHQ9_Score__c &lt; 20), 3,IF(AND(First_PHQ9_Score__c &gt; 19, First_PHQ9_Score__c &lt; 28),4,NULL)))))
&gt; IF(AND(Last_PHQ9_Score__c &gt;= 0, Last_PHQ9_Score__c &lt; 5), 0,IF(AND(Last_PHQ9_Score__c &gt; 4, Last_PHQ9_Score__c &lt; 10), 1,IF(AND(Last_PHQ9_Score__c &gt; 9, Last_PHQ9_Score__c &lt; 15), 2,IF(AND(Last_PHQ9_Score__c &gt; 14, Last_PHQ9_Score__c &lt; 20), 3,IF(AND(Last_PHQ9_Score__c &gt; 19, Last_PHQ9_Score__c &lt; 28), 4 ,NULL))))),
&quot;Improved&quot;, null
)
)
)</formula>
    <label>PHQ-9 Improvement Indicator</label>
    <type>Text</type>
</CustomField>