force-app/main/default/objects/Case/fields/Referred_Date__c.field-meta.xml
<CustomField>
    <fullName>Referred_Date__c</fullName>
    <formula>Referral_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred Date</label>
    <type>Date</type>
</CustomField>