force-app/main/default/objects/Case/fields/Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>Risk_Flag__c</fullName>
    <formula>IF(AND(Number_of_Risk_Records__c = 0, TEXT(WAW_Displaying_Risk_on_First_Contact__c) = &apos;Yes&apos;), IMAGE(&apos;/resource/1576755487000/GraphicsPackNew/fatcow/farmfresh/32/help.png&apos;, &apos;Question Mark&apos;),
IF(Risk_Flag_Red__c &gt; Risk_Flag_Amber__c, IMAGE(&apos;/resource/1576755487000/GraphicsPackNew/fatcow/farmfresh/32/flag_red.png&apos;, &apos;Red&apos;),
IF(Risk_Flag_Red__c &lt; Risk_Flag_Amber__c, IMAGE(&apos;/resource/1576755487000/GraphicsPackNew/fatcow/farmfresh/32/flag_yellow.png&apos;, &apos;Amber&apos;),
IF(AND(ISNULL(Risk_Flag_Red__c), NOT(ISNULL(Risk_Flag_Amber__c))), IMAGE(&apos;/resource/1576755487000/GraphicsPackNew/fatcow/farmfresh/32/flag_yellow.png&apos;, &apos;Amber&apos;),
IF(AND(NOT(ISNULL(Risk_Flag_Red__c)), ISNULL(Risk_Flag_Amber__c)), IMAGE(&apos;/resource/1576755487000/GraphicsPackNew/fatcow/farmfresh/32/flag_red.png&apos;, &apos;Red&apos;),
NULL)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Flag</label>
    <type>Text</type>
</CustomField>