force-app/main/default/objects/Case/fields/Risk_Flag_Red__c.field-meta.xml
<CustomField>
    <fullName>Risk_Flag_Red__c</fullName>
    <label>Risk Flag Red</label>
    <type>DateTime</type>
</CustomField>