force-app/main/default/objects/Case/fields/Total_Number_of_Attended_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Attended_Sessions__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Number of Attended Sessions</description>
    <inlineHelpText>Total Number of Attended Sessions</inlineHelpText>
    <label>Total Number of Attended Sessions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>