force-app/main/default/objects/Case/fields/Total_Number_of_DNAs__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_DNAs__c</fullName>
    <description>Total Number of DNA&apos;s</description>
    <inlineHelpText>Total Number of DNA&apos;s</inlineHelpText>
    <label>Total Number of DNA&apos;s</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>