force-app/main/default/objects/Case/fields/Total_Number_of_Step_1_Sessions_Attended__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Step_1_Sessions_Attended__c</fullName>
    <description>Total Number of Step 1 Sessions Attended</description>
    <inlineHelpText>Total Number of Step 1 Sessions Attended</inlineHelpText>
    <label>Total Number of Step 1 Sessions Attended</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>