force-app/main/default/objects/Case/fields/Total_Number_of_Step_2_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Step_2_Sessions__c</fullName>
    <description>Total Number of Step 2 Sessions</description>
    <inlineHelpText>Total Number of Step 2 Sessions</inlineHelpText>
    <label>Total Number of Step 2 Sessions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>