force-app/main/default/objects/Case/fields/Total_Number_of_Step_3_DNA__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Step_3_DNA__c</fullName>
    <description>Total Number of Step 3 DNA</description>
    <inlineHelpText>Total Number of Step 3 DNA</inlineHelpText>
    <label>Total Number of Step 3 Sessions DNA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>