force-app/main/default/objects/Case/fields/Waiting__c.field-meta.xml
<CustomField>
    <fullName>Waiting__c</fullName>
    <label>Waiting</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Helpline Call</fullName>
            </value>
            <value>
                <fullName>Management Advisory</fullName>
            </value>
            <value>
                <fullName>Mediation</fullName>
            </value>
            <value>
                <fullName>Legal and Financial</fullName>
            </value>
            <value>
                <fullName>Step 2 GSH (Book) Email</fullName>
            </value>
            <value>
                <fullName>Step 2 GSH (Book) Face to Face</fullName>
            </value>
            <value>
                <fullName>Step 2 GSH (Book) Telephone</fullName>
            </value>
            <value>
                <fullName>Step 2 GSH (Computer) Email</fullName>
            </value>
            <value>
                <fullName>Step 2 GSH (Computer) Face to Face</fullName>
            </value>
            <value>
                <fullName>Step 2 GSH (Computer) Telephone</fullName>
            </value>
            <value>
                <fullName>Step 2 GSH (Computer) Skype</fullName>
            </value>
            <value>
                <fullName>Step 3 CBT Face to Face</fullName>
            </value>
            <value>
                <fullName>Step 3 CBT Telephone</fullName>
            </value>
            <value>
                <fullName>Step 3 CBT Skype</fullName>
            </value>
            <value>
                <fullName>Step 3 CfD Face to Face</fullName>
            </value>
            <value>
                <fullName>Step 3 CfD Telephone</fullName>
            </value>
            <value>
                <fullName>Step 3 CfD Skype</fullName>
            </value>
            <value>
                <fullName>Step 3 Counselling Email</fullName>
            </value>
            <value>
                <fullName>Step 3 Counselling Face to Face</fullName>
            </value>
            <value>
                <fullName>Step 3 Counselling Skype</fullName>
            </value>
            <value>
                <fullName>Step 3 Counselling Telephone</fullName>
            </value>
            <value>
                <fullName>Step 3 EMDR Face to Face</fullName>
            </value>
            <value>
                <fullName>Step 3 EMDR Skype</fullName>
            </value>
            <value>
                <fullName>Step 3 IPT Face to Face</fullName>
            </value>
            <value>
                <fullName>Step 3 IPT Telephone</fullName>
            </value>
            <value>
                <fullName>Step 3 IPT Skype</fullName>
            </value>
            <value>
                <fullName>Step 3 Mindfulness Face to Face</fullName>
            </value>
            <value>
                <fullName>Step 3 Mindfulness Skype</fullName>
            </value>
            <value>
                <fullName>Step 3 Other Intervention Face to Face</fullName>
            </value>
            <value>
                <fullName>Step 3 Other Intervention Telephone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>