force-app/main/default/objects/Case/fields/WAW_Approval_Service_Manager_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>WAW_Approval_Service_Manager_Sign_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Manager Sign Off</label>
    <type>Checkbox</type>
</CustomField>