force-app/main/default/objects/Case/fields/WAW_Assessment_Risk__c.field-meta.xml
<CustomField>
    <fullName>WAW_Assessment_Risk__c</fullName>
    <label>Assessment Risk</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>