force-app/main/default/objects/Case/fields/WAW_Assessment_Summary__c.field-meta.xml
<CustomField>
    <fullName>WAW_Assessment_Summary__c</fullName>
    <description>The summary filled out by the therapist after completing the appointment</description>
    <label>Assessment Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>