force-app/main/default/objects/Case/fields/WAW_CD_Department__c.field-meta.xml
<CustomField>
    <fullName>WAW_CD_Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WAW_Custom_Demos_Account_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Adult Social Care - Adult Social Care</fullName>
            </value>
            <value>
                <fullName>Adult Social Care - Adult Transformation and Commissioning</fullName>
            </value>
            <value>
                <fullName>Alcohol and Drug Service</fullName>
            </value>
            <value>
                <fullName>Assets and Regeneration</fullName>
            </value>
            <value>
                <fullName>Back Office</fullName>
            </value>
            <value>
                <fullName>Befriender / Befriender Co-ordinator</fullName>
            </value>
            <value>
                <fullName>Branch Officer / Support Group Co-ordinator / Finance</fullName>
            </value>
            <value>
                <fullName>Business Assurance</fullName>
            </value>
            <value>
                <fullName>Business Relationship and Democracy</fullName>
            </value>
            <value>
                <fullName>CEO Office</fullName>
            </value>
            <value>
                <fullName>CEOs Office and Organisational Development</fullName>
            </value>
            <value>
                <fullName>Change Management and Resources</fullName>
            </value>
            <value>
                <fullName>City Development</fullName>
            </value>
            <value>
                <fullName>Citywide Services</fullName>
            </value>
            <value>
                <fullName>Clinical Support</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Communications, Customers and Culture</fullName>
            </value>
            <value>
                <fullName>Community and Continued Care</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Corporate and Support Services</fullName>
            </value>
            <value>
                <fullName>Corporate Services</fullName>
            </value>
            <value>
                <fullName>Creative and Performing Arts</fullName>
            </value>
            <value>
                <fullName>Culture, Tourism and Sports</fullName>
            </value>
            <value>
                <fullName>Customer and Support Services - Assurance</fullName>
            </value>
            <value>
                <fullName>Customer and Support Services - Customer and Business</fullName>
            </value>
            <value>
                <fullName>Customer and Support Services - Finance and Commercial</fullName>
            </value>
            <value>
                <fullName>Customer and Support Services - People and Change</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>