force-app/main/default/objects/Case/fields/WAW_CD_Detailed_Source_of_Referral__c.field-meta.xml
<CustomField>
    <fullName>WAW_CD_Detailed_Source_of_Referral__c</fullName>
    <label>Detailed Source of Referral</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origin</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care and Support</fullName>
            </value>
            <value>
                <fullName>Community Investment</fullName>
            </value>
            <value>
                <fullName>Customer Services</fullName>
            </value>
            <value>
                <fullName>Housing Services</fullName>
            </value>
            <value>
                <fullName>Income Services</fullName>
            </value>
            <value>
                <fullName>Leasehold Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>