force-app/main/default/objects/Case/fields/WAW_CD_Division__c.field-meta.xml
<CustomField>
    <fullName>WAW_CD_Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WAW_Custom_Demos_Account_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ashton, Leigh and Wigan</fullName>
            </value>
            <value>
                <fullName>Central Norfolk</fullName>
            </value>
            <value>
                <fullName>Craven</fullName>
            </value>
            <value>
                <fullName>DIG</fullName>
            </value>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>East Suffolk</fullName>
            </value>
            <value>
                <fullName>Great Yarmouth and Waveney</fullName>
            </value>
            <value>
                <fullName>Halton and St Helens</fullName>
            </value>
            <value>
                <fullName>Hambleton and Richmondshire</fullName>
            </value>
            <value>
                <fullName>Harrogate</fullName>
            </value>
            <value>
                <fullName>Headquarters</fullName>
            </value>
            <value>
                <fullName>Home Based</fullName>
            </value>
            <value>
                <fullName>Hungate</fullName>
            </value>
            <value>
                <fullName>Jorvik</fullName>
            </value>
            <value>
                <fullName>London and South East</fullName>
            </value>
            <value>
                <fullName>Micklegate</fullName>
            </value>
            <value>
                <fullName>Midlands</fullName>
            </value>
            <value>
                <fullName>Non-UK</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>Not Disclosed</fullName>
            </value>
            <value>
                <fullName>Nottingham</fullName>
            </value>
            <value>
                <fullName>Office Based</fullName>
            </value>
            <value>
                <fullName>Ryedale</fullName>
            </value>
            <value>
                <fullName>Scarborough</fullName>
            </value>
            <value>
                <fullName>Sheffield</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Warrington</fullName>
            </value>
            <value>
                <fullName>West Norfolk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>