force-app/main/default/objects/Case/fields/WAW_CD_Occupation__c.field-meta.xml
<CustomField>
    <fullName>WAW_CD_Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WAW_Custom_Demos_Account_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Clinical Services</fullName>
            </value>
            <value>
                <fullName>Additional Professional Scientific and Technical</fullName>
            </value>
            <value>
                <fullName>Admin and Clerical</fullName>
            </value>
            <value>
                <fullName>Administrative Staff</fullName>
            </value>
            <value>
                <fullName>Administrator / Co-ordinator</fullName>
            </value>
            <value>
                <fullName>Allied Health Professional</fullName>
            </value>
            <value>
                <fullName>All Other Staff</fullName>
            </value>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>Clinical Support Worker</fullName>
            </value>
            <value>
                <fullName>Councillor</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Dispensary</fullName>
            </value>
            <value>
                <fullName>Doctors and Dental</fullName>
            </value>
            <value>
                <fullName>Estates / Maintenance Staff</fullName>
            </value>
            <value>
                <fullName>Estates and Facilities</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Health Care Assistant</fullName>
            </value>
            <value>
                <fullName>Healthcare Scientists</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Manager - Middle</fullName>
            </value>
            <value>
                <fullName>Manager - Senior</fullName>
            </value>
            <value>
                <fullName>Manager - Team Leader / Supervisor</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Non Teaching Staff</fullName>
            </value>
            <value>
                <fullName>Not Disclosed</fullName>
            </value>
            <value>
                <fullName>Nurses - Registered</fullName>
            </value>
            <value>
                <fullName>Nurses - Unregistered</fullName>
            </value>
            <value>
                <fullName>Nursing and Midwifery Registered</fullName>
            </value>
            <value>
                <fullName>Nursing Auxillary / Senior Healthcare Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>