force-app/main/default/objects/Case/fields/WAW_CD_Overseas_Location__c.field-meta.xml
<CustomField>
    <fullName>WAW_CD_Overseas_Location__c</fullName>
    <label>Overseas Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WAW_CD_Division__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brunei</fullName>
            </value>
            <value>
                <fullName>Menai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>